# VkMain

./: CMakeLists.txt  main.cpp
Zreference/base/: VulkanInitializers.hpp  benchmark.hpp
assimp/src/dep_assimp-stamp/: dep_assimp-gitinfo.txt
assimp/tmp/: dep_assimp-gitclone.cmake
core/: Engine.cpp  Engine.hpp  asset.cpp  assetManager.hpp  draw.cpp  engineInit.cpp  interaction.cpp  interaction.hpp  sceneRenderer.hpp  uiDraw.cpp  uiRenderer.hpp
model/: camera.cpp  camera.hpp  importer.hpp  light.hpp  material.hpp  mesh.hpp  texture.cpp  texture.hpp  vertex.hpp
renderer/: descriptorPool.hpp  descriptorPoolManager.hpp  pipeline.hpp  renderPass.hpp  shaderModule.hpp
resource/: buffer.cpp  buffer.hpp  check.hpp  commandPool.hpp  common.hpp  descriptorPool.cpp  logicalDevice.hpp  memoryAllocator.hpp  memoryPool.hpp  physicalDevice.hpp  semaphore.hpp  swapChain.hpp  window.hpp
shader/: fragment.frag
source/core/: asset.cpp  assetManager.hpp  asset_manager.hpp  asset_setup.cpp  draw.cpp  engine.cpp  engine.hpp  engineInit.cpp  engine_init.cpp  engine_vk_context.hpp  engine_vk_load.cpp  event_manager.cpp  event_manager.hpp  event_manager_mode.hpp  formater.cpp  formater.hpp  log_sink.cpp  log_sink.hpp  renderer.cpp  renderer.hpp  renderer_draw.cpp  resource_manager.cpp  resource_manager.hpp  resource_manager_init.cpp  sceneRenderer.hpp  sys_renderer.hpp  ui_renderer.hpp  ui_renderer_begin.cpp  ui_renderer_draw.cpp  ui_renderer_draw_state.cpp
source/model/: Importer.hpp  ImporterEx.hpp  base_geometry.cpp  base_geometry.hpp  camera.cpp  camera.hpp  camera_cfg.hpp  camera_culling.hpp  frustumCulling.hpp  importer.cpp  importer.hpp  importer_desc.hpp  light.hpp  light_cfg.hpp  material.cpp  material.hpp  material_builder.cpp  material_builder.hpp  material_cfg.hpp  mesh.cpp  mesh.hpp  mesh_sub.hpp  model.hpp  models.hpp  sampler.hpp  scene.hpp  texture.cpp  texture.hpp  vertex.hpp
source/renderer/: descriptorPoolManager.hpp  descriptor_pool.hpp  dynamic_renderer.cpp  dynamic_renderer.hpp  pipeline.hpp  pipeline_cfg.hpp  renderPass.hpp  renderer_resource.hpp  renderpass.cpp  renderpass.hpp
source/resource/: buffer.cpp  buffer.hpp  buffer_builder.cpp  buffer_builder.hpp  commandBuffer.hpp  command_pool.cpp  command_pool.hpp  command_pool_manager.hpp  common.hpp  descriptor_config.hpp  descriptor_layout_builder.cpp  descriptor_layout_builder.hpp  descriptor_layout_config.hpp  descriptor_manager.cpp  descriptor_manager.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_uploader.cpp  descriptor_uploader.hpp  fence.cpp  fence.hpp  fence_pool.cpp  fence_pool.hpp  frame_pool.cpp  frame_pool.hpp  framebuffer.hpp  imageView.hpp  import_desc.hpp  instance.hpp  interface.hpp  memoryAllocator.hpp  memoryPool.hpp  memory_allocator.cpp  memory_allocator.hpp  memory_pool.cpp  memory_pool.hpp  pipeline.hpp  pipeline_cfg.hpp  pipeline_pool.cpp  pipeline_pool.hpp  (+22 more)
source/sculptor/: brush.hpp  dyn_mesh.cpp  dyn_mesh.hpp  sculptor.cpp  sculptor.hpp  sculptor_act.cpp  sculptor_act.hpp
source/shader/: fragment.frag  fragment.frag.spv  pbr.frag  sculptor.comp  sculptor.vert  sys_fragment.frag  vertex.vert  vertex.vert.spv
